# heyhermes

./: .env.example  .gitignore  README.md  compose.yml  docker-compose.yml  pyproject.toml
docs/: estendendo-com-mcp.md  hermes-setup.md  relatorios-e-navegador.md
hermes-tools/: render_report.py
hermes-tools/dbhub/: dbhub.toml
hermes-tools/demo/: seed.sql
src/heyhermes/: main.py
src/heyhermes/agent/: actions.py  brain.py  tools.py
src/heyhermes/audio/: mic.py  stt.py  tts.py  wake_word.py
src/heyhermes/core/: config.py
tests/: conftest.py  test_actions.py  test_prompt_directives.py  test_render_report.py
