[project]
name = "heyhermes"
version = "0.1.0"
description = "Assistente de voz estilo Jarvis: wake word + Faster-Whisper + LLM com tools + Piper TTS"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pydantic-settings>=2.6",
    "numpy>=1.26",
    "sounddevice>=0.5",
    "openwakeword>=0.6",
    "onnxruntime>=1.19",
    "faster-whisper>=1.0",
    "piper-tts>=1.3",
    "ollama>=0.4",
    "openai>=1.50",
]

[project.scripts]
heyhermes = "heyhermes.main:main"

[tool.uv]
# openwakeword exige tflite-runtime no Linux, mas não há wheels para py3.12+;
# usamos o backend onnxruntime, então o marker abaixo impede a instalação.
override-dependencies = [
    "tflite-runtime ; python_version < '3.12' and sys_platform == 'linux'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/heyhermes"]
