[project]
name = "heyhermes"
version = "0.1.0"
description = "Assistente de voz estilo Jarvis: wake word + Faster-Whisper + LLM com tools + Piper TTS"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pydantic-settings>=2.6",
    "numpy>=1.26",
    "sounddevice>=0.5",
    "openwakeword>=0.6",
    "onnxruntime>=1.19",
    "faster-whisper>=1.0",
    "piper-tts>=1.3",
    "openai>=1.50",
]

[project.scripts]
heyhermes = "heyhermes.main:main"

[dependency-groups]
dev = ["ruff>=0.9", "pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]      # torna `heyhermes` importável sem depender do install
addopts = "-q"

[tool.uv]
# openwakeword exige tflite-runtime no Linux, mas não há wheels para py3.12+;
# usamos o backend onnxruntime, então o marker abaixo impede a instalação.
override-dependencies = [
    "tflite-runtime ; python_version < '3.12' and sys_platform == 'linux'",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle (erros)
    "W",   # pycodestyle (avisos)
    "F",   # pyflakes
    "I",   # isort (ordem de imports)
    "UP",  # pyupgrade (sintaxe moderna)
    "B",   # flake8-bugbear (bugs prováveis)
    "C4",  # comprehensions
    "SIM", # simplificações
    "RUF", # regras próprias do ruff
]

[tool.ruff.lint.per-file-ignores]
# handlers de tools recebem (settings, args) por contrato, mesmo sem usar ambos
"src/heyhermes/agent/tools.py" = ["ARG001"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/heyhermes"]
